# rules-proto-grpc-bug

./: BUILD.bazel  WORKSPACE  mypackage.proto  myservice.proto
